# exercises-methods-sorting-parttwo

./: .gitignore  CMakeLists.txt  README.md
siga/: CMakeLists.txt  config.h.in
siga/include/: estudante.h  metrics.h  siga.h  sort.h
siga/src/: estudante.cc  metrics.cc  siga.cc
tests/: CMakeLists.txt  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc
tests/expected_output/: test3.csv  test5.csv
tests/input/: siga1000.csv  siga2000.csv  siga5000.csv
